# card-review-website

./: .gitignore  Cargo.toml  Dockerfile
.github/workflows/: build_publish.yml
.kubernetes/: manifest.yaml
src/: card.rs  cors.rs  error.rs  lib.rs  main.rs  repo.rs  review.rs
templates/: index.hbs  layout.hbs  review.hbs  review_list.hbs
