[package]
name = "dgc-review"
version = "0.1.0"
authors = ["Torben Carstens <github@carstens.tech>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
rocket = "0.4.6"
rocket_contrib = { version = "0.4.6", features = ["handlebars_templates", "json", "serve"], default-features = false }
serde = "1.0.118"
serde_json = "1.0.60"
serde_derive = "1.0.118"
uuid = { version = "0.8.1", features = ["v4"] }
